[package]
name = "grebedb-tool"
version = "1.0.0"
authors = ["Christopher Foo <chris.foo@gmail.com>"]
edition = "2018"
description = "Command line tool for operating on GrebeDB databases"
repository = "https://github.com/chfoo/grebedb/"
license = "MPL-2.0"
keywords = ["database", "key-value-store"]
categories = ["command-line-utilities"]

[features]
default = ["compression", "file_locking", "system"]
compression = ["grebedb/compression", "zstd"]
file_locking = ["grebedb/file_locking"]
system = ["grebedb/system"]

[dependencies.grebedb]
version = "1.0"
path = "../library"
default-features = false

[dependencies]
anyhow = "1.0"
bson = "1.2"
clap = "2.33"
crc32c = "0.6"
data-encoding = "2.3"
percent-encoding = "2.1"
rmpv = "0.4"
rustyline = "8.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shell-words = "1.0"
zstd = { version = "0.8", optional = true }
